adjust button naming convention

--- a/generators/app/templates/shared/theme/src/sass/atoms/_form-elements.scss
+++ b/generators/app/templates/shared/theme/src/sass/atoms/_form-elements.scss
@@ -3,12 +3,12 @@
 
 button,
 input[type="submit"] {
-  @include btn--submit($button-color);
+  @include button--submit($button-color);
 }
 
 input[value="Delete"],
 input[value="Remove"] {
-  @include btn--submit($delete-color);
+  @include button--submit($delete-color);
 }
 
 // textarea, /* Every input field known to css. work in progress */
