--- a/generators/app/templates/shared/theme/src/sass/_mixins.scss
+++ b/generators/app/templates/shared/theme/src/sass/_mixins.scss
@@ -25,7 +25,7 @@
 ////////////////////////////
 
 
-@mixin btn--submit($btn-color: #000000, $btn-radius: $button-border-radius, $btn-padding: $input-padding) {
+@mixin button--submit($btn-color: #000000, $btn-radius: $button-border-radius, $btn-padding: $input-padding) {
   background-color: $btn-color;
   color: lighten($btn-color, 60%);
   font-weight: normal;
