--- a/generators/app/templates/shared/theme/src/sass/atoms/_buttons.scss
+++ b/generators/app/templates/shared/theme/src/sass/atoms/_buttons.scss
@@ -1,6 +1,14 @@
 /* @partial _buttons.scss */
 
 
+// Change this mixin @ _mixins.scss as needed.
+// Mixin arguments: button--submit($btn-color: #000000, $btn-radius: $button-border-radius, $btn-padding: $input-padding) {
+
 .button {
-  @include btn--submit($button-color);
+  @include button--submit($button-color);
 }
+
+// Example
+// .button--black {
+//   @include button--submit(#000);
+// }
