--- a/generators/app/templates/shared/theme/src/sass/molecules/_menus.scss
+++ b/generators/app/templates/shared/theme/src/sass/molecules/_menus.scss
@@ -2,15 +2,15 @@
 
 
 
-// ul.menu {
-//   li {
-//   list-style-image: none;
-//   list-style-type: none;
-//     a {
-//       -webkit-user-select: none; // Prevents text within from being selected.
-//       -moz-user-select: none;
-//       -ms-user-select: none;
-//       user-select: none;
-//     }
-//   }
-// }
+ul.menu {
+  li {
+  list-style-image: none;
+  list-style-type: none;
+    a {
+      -webkit-user-select: none; // Prevents text within from being selected.
+      -moz-user-select: none;
+      -ms-user-select: none;
+      user-select: none;
+    }
+  }
+}
