fix sass errors, adjust scaffolding temp directory

--- a/generators/app/templates/shared/theme/src/sass/_theme.scss
+++ b/generators/app/templates/shared/theme/src/sass/_theme.scss
@@ -249,6 +249,7 @@ $tabs-background-color: $ui-background-color;
 $tabs-background-color--active: $link-color;
 $tabs-border-color: $ui-border-color;
 $tabs-border-color--active: $link-color;
+$tabs-content-color: $body-font-color;
 $tabs-content-color--active: #ffffff;
 $tabs-border-radius: $ui-border-radius;
 $tabs-font-size: 1rem;
