--- a/generators/app/templates/shared/theme/src/sass/molecules/_tabs.scss
+++ b/generators/app/templates/shared/theme/src/sass/molecules/_tabs.scss
@@ -33,7 +33,7 @@ ul.tabs__primary {
       text-transform: uppercase;
       background-color: $tabs-background-color;
       border: 1px solid $tabs-border-color;
-      border-top-radius: $tabs-display-border-radius;
+      border-top-radius: $tabs-border-radius;
       color: $tabs-content-color;
       padding: 0 1.5rem;
       &:hover {
