--- a/generators/app/templates/shared/theme/src/sass/atoms/_form-elements.scss
+++ b/generators/app/templates/shared/theme/src/sass/atoms/_form-elements.scss
@@ -60,7 +60,7 @@ input[type="image"] {
 input.error,
 textarea.error,
 select.error {
- border: 1px solid $error-color;
+ border: 1px solid $error-border;
 }
 
 
