--- a/generators/app/templates/shared/theme/.docs/development/index-dev.html
+++ b/generators/app/templates/shared/theme/.docs/development/index-dev.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <title>Development Environment Documentation</title>
-    <link rel="stylesheet" type="text/css" href="css/styles.css">
+    <link rel="stylesheet" type="text/css" href="css/styles--docs.css">
 </head>
 <body>
 <div id="page">
