change file names to be in line with popular sass architectures

--- a/generators/app/templates/shared/theme/src/sass/_base.scss
+++ b/generators/app/templates/shared/theme/src/sass/_base.scss
@@ -3,6 +3,6 @@
 @import "../../sass-dependencies/breakpoint-sass/stylesheets/breakpoint";
 @import "../../sass-dependencies/singularity/stylesheets/singularitygs";
 @import "_layout.scss";
-@import "_theme.scss";
+@import "_variables.scss";
 @import "_mixins.scss";
 
