--- a/generators/app/templates/shared/theme/src/sass/_base.scss
+++ b/generators/app/templates/shared/theme/src/sass/_base.scss
@@ -2,7 +2,7 @@
 @import "../../sass-dependencies/compass-mixins/lib/compass";
 @import "../../sass-dependencies/breakpoint-sass/stylesheets/breakpoint";
 @import "../../sass-dependencies/singularity/stylesheets/singularitygs";
-@import "_layout__variables.scss";
+@import "_variables__layout.scss";
 @import "_variables.scss";
 @import "_mixins.scss";
 
