--- a/generators/app/templates/shared/theme/src/sass/atoms/_normalize.scss
+++ b/generators/app/templates/shared/theme/src/sass/atoms/_normalize.scss
@@ -14,6 +14,15 @@ body {
   background-color: $body-bgrd-color;
 }
 
+/* Remove touch delay IOS9.3+, Older browser would need FastClick js library to disable 350ms delay */
+// May need to adjust selctors here. Needs testing.
+a,
+input,
+textarea,
+button,
+select {
+  touch-action: manipulation;
+}
 
 /* HTML5 display definitions
    ========================================================================== */
