--- a/generators/app/templates/shared/theme/src/sass/_variables.scss
+++ b/generators/app/templates/shared/theme/src/sass/_variables.scss
@@ -126,10 +126,10 @@ $body-bgrd-color: #ffffff;
 
 // LINKS
 $link-color: $blue-gray;
-$link-color-visited: darken($blue-gray, 10%);
-$link-color-hover: darken($blue-gray, 5%);
-$link-color-focus: darken($blue-gray, 10%);
-$link-color-active: darken($blue-gray, 10%);
+$link-color-visited: darken($link-color, 10%);
+$link-color-hover: darken($link-color, 5%);
+$link-color-focus: darken($link-color, 10%);
+$link-color-active: darken($link-color, 10%);
 $link-text-decoration: none;
 
 
