--- a/generators/app/templates/shared/theme/src/sass/templates/_layout__default--fluid.scss
+++ b/generators/app/templates/shared/theme/src/sass/templates/_layout__default--fluid.scss
@@ -12,13 +12,13 @@ html {
 }
 
 // @TODO: Change these to individual regions (header, content, footer)
-.layout-container {
+.layout-container,
+.region-footer {
   @include layout-container;
 }
 
-header,
-main,
-footer {
+.main,
+.region-footer {
   @include layout-gutter;
   @include micro-clearfix;
 }
