add grid gutter mixin

--- a/generators/app/templates/shared/theme/src/sass/_mixins.scss
+++ b/generators/app/templates/shared/theme/src/sass/_mixins.scss
@@ -536,7 +536,11 @@
 }
 
 @mixin layout-gutter {
+  padding-left: $horiz-gutter;
+  padding-right: $horiz-gutter;
+}
+
+@mixin grid-gutter {
   padding-left: ($horiz-gutter/2);
   padding-right: ($horiz-gutter/2);
 }
-
