add modernizr module to build process

--- a/generators/app/templates/shared/theme/.docs/development/index-dev.html
+++ b/generators/app/templates/shared/theme/.docs/development/index-dev.html
@@ -129,6 +129,11 @@ build.images.favicon
 build.images.itunes
 build.sprite</pre>
 
+<h4>CUSTOM MODERNIZR TESTS</h4>
+<pre>
+modernizr
+</pre>
+
 
 <h4>BROWSER SYNC</h4>
 <pre>
